tests/invalid/foreign_decl_line_number.err_exp4
foreign_decl_line_number.m:19: error: #error Error in foreign decl
foreign_decl_line_number.m:23: error: #error Error in foreign code
foreign_decl_line_number.m:37: error: #error Error in foreign proc
